update de estilo

--- a/style.css
+++ b/style.css
@@ -48,3 +48,20 @@ img {
 .superinfo a {
     color: white;
 }
+
+    /*Menu*/
+
+.menu-bg {
+    background: #2c70ff;
+}
+
+.menu {
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 15px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+}
+
