--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body, h1, h2, p, ul, li, a {
 }
 
 body{
-    font-family: Nunito, Helvetica, Arial, sans-serif;
-    color: #22222;
+    font-family: "Nunito", Helvetica, Arial, sans-serif;
+    color: #222222;
 }
 
 ul{
@@ -65,3 +65,37 @@ img {
     align-items: center;
 }
 
+.menu a {
+    color: white;
+}
+
+.menu-logo a {
+    font-size: 2.5em;
+    font-weight: bold;
+    margin: 0 10px;
+}
+
+.menu-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.menu-nav a {
+    font-size: 1.25em;
+    display: block;
+    padding: 10px;
+}
+
+.menu-nav a:hover{
+    color: #122ab2;
+}
+
+    /*Introdução*/
+
+.introducao {
+    font-size: 3em;
+    line-height: 1;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 60px 10px;
+}
