--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ img {
 }
 
 .sobre-info {
-    flex: 2;
+    flex: 2 1 300px;
     margin: 0 10px;
 }
 
@@ -133,3 +133,30 @@ img {
     margin: 0 10px;
 }
 
+    /*PRODUTOS*/
+.produtos {
+    max-width: 960px;
+    margin: 60px auto;
+}
+
+.produtos h1 {
+    font-size: 3em;
+    margin: 0 10px 60px 10px;
+}
+
+.produtos-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.produtos-item {
+    flex: 1 1 175px;
+    margin: 10px;
+}
+
+.produtos-item h2 {
+    font-size: 3em;
+    color: #a4a4a4;
+    background: #f7f7f7;
+    padding: 50px 20px;
+}
