--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ img {
 
 .newslatter-form {
     flex: 2  260px;
-    margin: 0 10px;
+    margin: 0 20px;
     align-self: center;
     display: flex;
     flex-wrap: wrap;
@@ -353,4 +353,20 @@ img {
     cursor: pointer;
     border: 0px;
     padding: 15px 10px;
+}
+
+/*footer*/
+
+.footer{
+    display: flex;
+    background: #2c70ff;
+    height: 200px;
+    align-items: center;
+}
+
+.footer p {
+    flex: 1;
+    text-align: center;
+    font-size: 2.25em;
+    color: #122ab2;
 }
